2006-10-31  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* battery.el (battery-linux-proc-acpi): Prevent range error when
	`full-capacity' is 0.

2006-10-31 Yoni Rabkin Katzenell <yoni-r@actcom.com>  (tiny change)

	* lisp/faces.el (faces-sample-overlay): New defvar.
	(faces-sample-overlay): New function to show face sample text.
	(describe-face): Use it.

2006-10-31  Stephen Leake  <stephen_leake@stephe-leake.org>

	* progmodes/ada-stmt.el: Change maintainer, apply
	whitespace-cleanup, checkdoc.
	(ada-func-or-proc-name): Add doc string.

	* progmodes/ada-prj.el (ada-prj-new): Change maintainer, apply
	whitespace-cleanup, checkdoc.  Minor improvements to many doc
	strings and comments.
	(ada-prj-display-page): Change buffer name to more accurately
	reflect function.

	* progmodes/ada-xref.el: Change maintainer, apply
	whitespace-cleanup, checkdoc.  Minor improvements to many doc
	strings and comments.  Don't look for `gvd' or `ddd' debuggers.
	(ada-compile-current): Don't add newlines to commands.

2006-10-31  Juanma Barranquero  <lekktu@gmail.com>

	* server.el: Add support for TCP sockets.
	(server-use-tcp, server-host, server-auth-dir): New options.
	(server-auth-key): New variable.
	(server-ensure-safe-dir): Create nonexistent parent dirs.
	Ignore Unix-style file modes on Windows.
	(server-start): Crete a TCP or Unix socket according to the value
	of `server-use-tcp'.  For TCP sockets, create the id/auth file in
	`server-auth-dir' directory.
	(server-process-filter): Delete process if authentication
	fails (which never happens for Unix sockets).

2006-10-30  David Kastrup  <dak@gnu.org>

	* subr.el (add-to-list): Don't continue checking if a match has
	been found.

2006-10-30  Chong Yidong  <cyd@stupidchicken.com>

	* tutorial.el: Move defvars to avoid bytecomp warnings.
	(tutorial--find-changed-keys): Check if viper-current-state is
	bound before using it.
	(help-with-tutorial): Check if viper-tutorial is defined before
	using it.
